FlightPath 6.x Changelog
========================

2022-01-27
  Fixed bug where draft mode was no longer accessible.

  Fixed several bugs where school_id was not being taken into account with regard to track selection.
  
  Fixed FlightPath::get_all_courses_in_catalog_year()-- noticed that it was hard-coded to only return undergrad courses.  Added
  a boolean to change that.
  

2022-01-26
  Tweaked logic to function that "balances" the student profile attributes.
  
  
2022-01-19
  Added new function: db_get_user_id_from_user_name()


2022-01-17
  Added ability to change site logo (in system settings).
  
  Added "powered by FlightPath Academics" to bottom of page template.
  
  Correcting if statements checking for if hours < 1 to if hours == 0, since some courses at some
  schools may be less than 1 hour.
  

2022-01-16
  Changed the 404 error to log as "page_not_found" type, instead of "system", as it shows up quite a bit in the logs and can be
  difficult to sift through for valid system messages.
  
  Updated Lassie message to show time in site's default timezone.
  

2022-01-15
  Fixed bug where degrees, groups, and courses not in school 0 were showing up (and causing problems) when the schools
  module was turned off.  Changed the logic so that when schools module is not enabled, we will only be shown school=0.

  Added "date" as element type for form api.
  
  Added new hook to user module, allowing us to change the display value of a user attribute.
  
  Tweaked function to "balance" the profile items on a page.


2022-01-13
  Minor edit: cleared up wording for mass sms permission.
  
  Fixed bug where mass txt was not possible except for admin user because
  we were checking the wrong permission.
  
  Small change to fp_space_csv function, to reduce double-spaces.
  
  Fixed bug in course search edit, where it was not showing terms correctly based on school_id.
  
  Added extra message to schools module.
  